# MarkerServer

./: .gitignore  README.md
FIFOTest/: CMakeLists.txt
FIFOTest/src/: fifotest.cpp
MarkerServer/: CMakeLists.txt
MarkerServer/input_data/: map_3.yml
MarkerServer/src/: markerserver.cpp
MarkerTestClient/: CMakeLists.txt
MarkerTestClient/src/: markerclient.cpp
MultiMarkerServer/: CMakeLists.txt
MultiMarkerServer/input_data/: camera_module_v2_640x480.yml  droneport.yml  droneport_old.yml  intrinsics.yml  payload.yml
MultiMarkerServer/output_data/: state.csv
MultiMarkerServer/src/: multimarkerserver.cpp
UTFIFOTest/: CMakeLists.txt
UTFIFOTest/src/: utfifotest.cpp
libraries/arucowrapper/: arucowrapper.cpp  arucowrapper.h
libraries/fifo/: fifo.cpp  fifo.h
libraries/mymarker/: mymarker.cpp  mymarker.h
libraries/nc/navigator/: navigator.cpp  navigator.h
libraries/nc/shared/: shared.cpp
libraries/nc/stateestimator/: stateestimator.cpp
